# BFMC_Localization

./: .gitignore  README.md  analyze_bag.py  frames_2026-05-10_01.53.11.gv  install_isaac.md  monitor_localization.sh  run_localization.sh  topic_pipeline.md
docker/: Dockerfile.bfmc
src/: bfmc_localization.launch.py  ros2_commands.md
src/automobile_imu/: package.xml  setup.cfg  setup.py
src/automobile_imu/automobile_imu/: bno055_imu_node.py
src/bfmc_car_description/: CMakeLists.txt  package.xml
src/bfmc_car_description/config/: joint_names_bfmc_car_description.yaml
src/bfmc_car_description/launch/: display.launch  display.launch.py  gazebo.launch  robot_state_publisher.launch.py
src/bfmc_car_description/meshes/: base_link.STL  camera_base_link.STL  camera_mount_link.STL  front_left_steering_link.STL  front_right_steering_link.STL  tyre_front_left_link.STL  tyre_front_right_link.STL  tyre_rear_left_link.STL  tyre_rear_right_link.STL
src/bfmc_car_description/urdf/: bfmc_car_description.csv  bfmc_car_description.urdf  bfmc_car_description.urdf.xacro
src/bfmc_global_localization/: CMakeLists.txt  package.xml
src/bfmc_global_localization/config/: global_ekf.yaml  global_ekf_no_gps.yaml
src/bfmc_global_localization/launch/: bfmc_localization.launch.py  global_ekf.launch.py
src/bfmc_global_localization/maps/: Competition_track_graph.graphml  sign_with_position.txt
src/bfmc_global_localization/scripts/: path_planner.py
src/bfmc_global_localization/src/: position_publisher_node.cpp  sign_localization_node.cpp
src/bfmc_gps_position/: CMakeLists.txt  package.xml
src/bfmc_gps_position/launch/: gps_position.launch.py
src/bfmc_gps_position/msg/: GpsTagPose.msg
src/bfmc_gps_position/src/: gps_tag_to_base_node.cpp
src/bfmc_isaac_visual_odom/: CMakeLists.txt  LICENSE  package.xml
src/bfmc_isaac_visual_odom/launch/: isaac_visual_odom_rgbd.launch.py  isaac_visual_odom_stereo.launch.py
src/bfmc_isaac_visual_odom/src/: visual_odom_republisher.cpp
src/bfmc_localization_fusion/: CMakeLists.txt  package.xml
src/bfmc_localization_fusion/config/: local_ekf.yaml
src/bfmc_localization_fusion/launch/: local_ekf.launch.py
src/bfmc_map_matching/: CMakeLists.txt  package.xml
src/bfmc_map_matching/config/: map_matching.yaml
src/bfmc_map_matching/launch/: rgb_map_matching.launch.py
src/bfmc_map_matching/src/: rgb_map_matching_node.cpp
src/bfmc_odometry_fusion/: CMakeLists.txt  package.xml
src/bfmc_odometry_fusion/launch/: local_ekf.launch.py
src/bfmc_odometry_fusion/src/: odom_stats_node.cpp
src/bfmc_state_odometry/: CMakeLists.txt  package.xml
src/bfmc_state_odometry/launch/: state_odometry.launch.py
src/bfmc_state_odometry/src/: car_imu_republisher_node.cpp  encoder_odometry_node.cpp
