<?xml version="1.0"?>
<package format="3">
  <name>bfmc_car_description</name>
  <version>0.0.0</version>
  <description>BFMC car description with SolidWorks model and OAK-D Pro camera.</description>

  <maintainer email="jayamal@example.com">Jayamal Sigera (UniPD DriveOps)</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>depthai_descriptions</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>



