<?xml version="1.0"?>
<package format="3">
  <name>bfmc_isaac_visual_odom</name>
  <version>0.0.1</version>
  <description>BFMC Isaac ROS RGB-D visual odometry wrapper</description>

  <maintainer email="jayamal@example.com">Jayamal</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>isaac_ros_visual_slam</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>